Add version extraction for tailscale GitHub action in renovate.json

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -9,7 +9,8 @@
       "fileMatch": ["^(workflow-templates|\.(?:github|gitea|forgejo)/workflows)/[^/]+\.ya?ml$"],
       "matchStrings": ["uses: tailscale\\/github-action@v2(?:\\s+.*\\n)*?.*version: (?<currentValue>.*?)\\n"],
       "depNameTemplate": "tailscale/tailscale",
-      "datasourceTemplate": "github-releases"
+      "datasourceTemplate": "github-releases",
+      "extractVersionTemplate": "v(?<version>.*)"
     }
   ],
   "packageRules": [
